pito quemao y cubocarne

--- a/src/main/resources/assets/pruebamod/lang/en_us.json
+++ b/src/main/resources/assets/pruebamod/lang/en_us.json
@@ -1,4 +1,6 @@
 
 {
-  "item.pruebamod.pito": "Pito"
+  "item.pruebamod.pito": "Pito",
+  "item.pruebamod.pito_cooked": "Pito quemao",
+  "block.pruebamod.meat_block": "Cubo carne"
 }
