--- a/src/main/resources/assets/pruebamod/lang/en_us.json
+++ b/src/main/resources/assets/pruebamod/lang/en_us.json
@@ -6,6 +6,6 @@
   "block.pruebamod.meat_block": "Cubo carne",
   "block.pruebamod.pito_ore": "Pitore",
   "item.pruebamod.iron_anal_plug": "Plug anal de hierro",
-  "item.pruebamod.diamond_anal_plug": "Plug anal de diamante"
-
+  "item.pruebamod.diamond_anal_plug": "Plug anal de diamante",
+  "block.pruebamod.cachimba_morada": "Cachimba morada"
 }
