--- a/src/main/resources/assets/pruebamod/lang/en_us.json
+++ b/src/main/resources/assets/pruebamod/lang/en_us.json
@@ -7,5 +7,6 @@
   "block.pruebamod.pito_ore": "Pitore",
   "item.pruebamod.iron_anal_plug": "Plug anal de hierro",
   "item.pruebamod.diamond_anal_plug": "Plug anal de diamante",
-  "block.pruebamod.cachimba_morada": "Cachimba morada"
+  "block.pruebamod.amethyst_water_pipe": "Cachimba morada",
+  "item.pruebamod.manguera": "Manguera"
 }
