--- a/src/main/resources/assets/pruebamod/lang/en_us.json
+++ b/src/main/resources/assets/pruebamod/lang/en_us.json
@@ -8,5 +8,7 @@
   "item.pruebamod.iron_anal_plug": "Plug anal de hierro",
   "item.pruebamod.diamond_anal_plug": "Plug anal de diamante",
   "block.pruebamod.amethyst_water_pipe": "Cachimba morada",
-  "item.pruebamod.manguera": "Manguera"
+  "item.pruebamod.manguera": "Manguera",
+  "pruebamod.tooltip.liquid.amount.with.capacity" : "%s / %s mB",
+  "pruebamod.tooltip.liquid.amount": "%s mB"
 }
